:sparkles: update user

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
-MONGO_URL_ONLINE=mongodb+srv://nqtrung0810:Dsjb7Cs6uvSfNRrA@cluster0.819krse.mongodb.net/studentManagement?retryWrites=true&w=majority
+MONGO_URL_ONLINE=mongodb+srv://theanh:theanh3012@theanh.of7iq.mongodb.net/std_manager?retryWrites=true&w=majority
 MONGO_URL_OFFLINE=mongodb://localhost:27017/studentManagement
 SECRET_KEY_JWT=std-manager
 JWT_ACCESS_KEY =std-manager-accessToken
